# react_router

./: README.md  biome.json  bun.lockb  components.json  oidc.md  package.json  tailwind.config.ts  vite.config.ts
.husky/: pre-commit
app/: root.tsx  routes.ts
app/assets/styles/: _global.css  _reset.css  app.css
app/components/clients/: ClientsSearch.tsx
app/components/layout/: GlobalNav.tsx  UserMenu.tsx
app/components/maps/: BottomFixedNav.tsx
app/components/ui/: Card.tsx  ContextMenu.tsx  DropdownMenu.tsx  Search.tsx  SideBarLogo.tsx  Switch.tsx
app/constants/: maps.ts  meta.ts
app/hooks/: useGeolocation.ts  useIsMobile.ts  useUserData.ts
app/lib/: maps.ts
app/routes/: index.tsx
app/routes/auth/: callback.tsx  login.tsx
app/routes/clients/: detail.$clientId.tsx  index.tsx  layout.tsx  search.tsx
app/routes/maps/: clients.tsx  index.tsx  layout.tsx  place.$clientId.tsx  search.$query.tsx
app/routes/schedule/: index.tsx
app/service/auth/: auth.server.ts  session.server.ts
app/types/: env.d.ts  index.d.ts
backend/: .env.dev  JWTトークン解析.md  README.md  compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: auth_middleware.py
backend/app/core/services/: oidc_key.py  oidc_validator.py
backend/app/libs/: maps.py  nlp.py
backend/app/models/: users.py
backend/app/routers/: client.py  hello.py  maps.py
backend/docker/api/: Dockerfile
backend/docker/db/: Dockerfile
backend/prisma/: schema.prisma  seed.py
backend/prisma/migrations/20250107050338_/: migration.sql
